reflectapi-demo/tests/errors/invalid_reflect_field_type_generic.stderr
error[E0277]: the trait bound `NotReflectable: Input` is not satisfied
 --> tests/errors/invalid_reflect_field_type_generic.rs:3:12
  |
3 |     field: Vec<NotReflectable>,
  |            ^^^^^^^^^^^^^^^^^^^ the trait `Input` is not implemented for `NotReflectable`, which is required by `Vec<NotReflectable>: Input`
  |
  = help: the following other types implement trait `Input`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: required for `Vec<NotReflectable>` to implement `Input`

error[E0277]: the trait bound `NotReflectable: reflectapi::Output` is not satisfied
 --> tests/errors/invalid_reflect_field_type_generic.rs:3:12
  |
3 |     field: Vec<NotReflectable>,
  |            ^^^^^^^^^^^^^^^^^^^ the trait `reflectapi::Output` is not implemented for `NotReflectable`, which is required by `Vec<NotReflectable>: reflectapi::Output`
  |
  = help: the following other types implement trait `reflectapi::Output`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: required for `Vec<NotReflectable>` to implement `reflectapi::Output`
